Use tabular figures in table cells
Tab­u­lar fig­ures are set on a fixed width, so that every fig­ure oc­cu­pies the same
amount of hor­i­zon­tal space.

Reference: http://practice.typekit.com/lesson/caring-about-opentype-features/

--- a/app/assets/stylesheets/administrate/base/_tables.scss
+++ b/app/assets/stylesheets/administrate/base/_tables.scss
@@ -16,6 +16,10 @@ td {
 
 td {
   border-bottom: $base-border;
+  font-feature-settings: "kern", "liga", "clig", "calt", "lnum", "tnum";
+  font-kerning: normal;
+  font-variant-ligatures: common-ligatures, contextual;
+  font-variant-numeric: lining-nums, tabular-nums;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
