Add a label for the search input
- Properly label the input, to improve accessibility, but visually hide it to
  maintain the design, which uses a placeholder to indicate use
- Uses the hide content technique from The Accessibility Project:
  http://a11yproject.com/posts/how-to-hide-content/
- Fixes #415

--- a/app/views/administrate/application/index.html.erb
+++ b/app/views/administrate/application/index.html.erb
@@ -27,14 +27,15 @@ It renders the `_table` partial to display details about the resources.
 
 <% content_for(:search) do %>
   <form class="search">
-    <span class='search__icon'>
+    <span class="search__icon">
       <%= svg_tag "administrate/search.svg", "search", width: 16, height: 16 %>
     </span>
-
+    <label class="visually-hidden" for="search-input">Search</label>
     <input
       type="text"
       name="search"
       class="search__input"
+      id="search-input"
       placeholder="Search"
       value="<%= search_term %>"
     />
