Variablize the bold font weight

--- a/app/assets/stylesheets/administrate/base/_lists.scss
+++ b/app/assets/stylesheets/administrate/base/_lists.scss
@@ -9,7 +9,7 @@ dl {
   margin-bottom: $small-spacing;
 
   dt {
-    font-weight: 600;
+    font-weight: $bold-font-weight;
     margin-top: $small-spacing;
   }
 
