--- a/app/assets/stylesheets/administrate/base/_forms.scss
+++ b/app/assets/stylesheets/administrate/base/_forms.scss
@@ -6,14 +6,14 @@ fieldset {
 }
 
 legend {
-  font-weight: 600;
+  font-weight: $bold-font-weight;
   margin-bottom: $small-spacing / 2;
   padding: 0;
 }
 
 label {
   display: block;
-  font-weight: 600;
+  font-weight: $bold-font-weight;
 }
 
 input,
