--- a/app/assets/stylesheets/administrate/components/_cells.scss
+++ b/app/assets/stylesheets/administrate/components/_cells.scss
@@ -22,7 +22,7 @@
 
 .cell-label--asc,
 .cell-label--desc {
-  font-weight: 600;
+  font-weight: $bold-font-weight;
 }
 
 .cell-label__sort-indicator {
